--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,14 @@
             <version>1.0.3-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
-
+        <dependency>
+            <groupId>me.locm</groupId>
+            <artifactId>economyapi</artifactId>
+            <scope>system</scope>
+            <optional>false</optional>
+            <version>1.0-SNAPSHOT</version>
+            <systemPath>${project.basedir}/src/main/resources/LCoin.jar</systemPath>
+        </dependency>
         <dependency>
             <groupId>me.labalityowo</groupId>
             <artifactId>formconstructors</artifactId>
